# LLMTrading

./: LICENSE  README.md  pyproject.toml
data/: price_history.csv
docs/: PRD.md
src/llmtrading/: __init__.py  cli.py  data_loader.py  dex_client.py  llm_agent.py  trading_engine.py
tests/: test_trading_engine.py
